[tool.poetry]
name = "course-pay"
version = "0.1.0"
description = ""
authors = ["ZhuldikovNikita <N.zhuldikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
check-list = "^1.2.0"
utils = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
